--- a/adm/style/page_rendering.html
+++ b/adm/style/page_rendering.html
@@ -1,38 +1,23 @@
 {%- extends '@marttiphpbb_calendarweekview/base.html' -%}
 
 {%- block heading -%}
-	{{- lang('ACP_MARTTIPHPBB_CALENDARMONTHVIEW_PAGE_RENDERING') -}}
+	{{- lang('ACP_MARTTIPHPBB_CALENDARWEEKVIEW_RENDERING') -}}
 {%- endblock -%}
 
 {%- block form_content -%}
 	<fieldset>
 		{%- embed '@marttiphpbb_calendarweekview/include/radio.html' with {'checked': SHOW_TODAY} only -%}
 			{%- block label -%}
-				{{- lang('ACP_MARTTIPHPBB_CALENDARMONTHVIEW_TODAY') -}}
+				{{- lang('ACP_MARTTIPHPBB_CALENDARWEEKVIEW_TODAY') -}}
 			{%- endblock -%}
 			{%- block name -%}
 				show_today
 			{%- endblock -%}
 		{%- endembed -%}
 
-		{%- embed '@marttiphpbb_calendarweekview/include/radio.html' with {'checked': FIRST_WEEKDAY} only -%}
-			{%- block label -%}
-				{{- lang('ACP_MARTTIPHPBB_CALENDARMONTHVIEW_FIRST_WEEKDAY') -}}
-			{%- endblock -%}
-			{%- block name -%}
-				first_weekday
-			{%- endblock -%}
-			{%- block zero -%}
-				{{- lang(['datetime', 'Sunday']) -}}
-			{%- endblock -%}
-			{%- block one -%}
-				{{- lang(['datetime', 'Monday']) -}}
-			{%- endblock -%}
-		{%- endembed -%}
-
 		{%- embed '@marttiphpbb_calendarweekview/include/radio.html' with {'checked': SHOW_ISOWEEK} only -%}
 			{%- block label -%}
-				{{- lang('ACP_MARTTIPHPBB_CALENDARMONTHVIEW_ISOWEEK') -}}
+				{{- lang('ACP_MARTTIPHPBB_CALENDARWEEKVIEW_ISOWEEK') -}}
 			{%- endblock -%}
 			{%- block name -%}
 				show_isoweek
@@ -41,42 +26,29 @@
 
 		{%- embed '@marttiphpbb_calendarweekview/include/radio.html' with {'checked': SHOW_MOON_PHASE} only -%}
 			{%- block label -%}
-				{{- lang('ACP_MARTTIPHPBB_CALENDARMONTHVIEW_MOON_PHASE') -}}
+				{{- lang('ACP_MARTTIPHPBB_CALENDARWEEKVIEW_MOON_PHASE') -}}
 			{%- endblock -%}
 			{%- block name -%}
 				show_moon_phase
-			{%- endblock -%}
-		{%- endembed -%}
-
-		{%- embed '@marttiphpbb_calendarweekview/include/radio.html' with {'checked': TOPIC_HILIT} only -%}
-			{%- block label -%}
-				{{- lang('ACP_MARTTIPHPBB_CALENDARMONTHVIEW_TOPIC_HILIT') -}}
-			{%- endblock -%}
-			{%- block explain -%}
-				<br>
-				{{- lang('ACP_MARTTIPHPBB_CALENDARMONTHVIEW_TOPIC_HILIT_EXPLAIN') -}}
-			{%- endblock -%}
-			{%- block name -%}
-				topic_hilit
 			{%- endblock -%}
 		{%- endembed -%}
 	</fieldset>
 
 	<fieldset>
 		<legend>
-			{{- lang('ACP_MARTTIPHPBB_CALENDARMONTHVIEW_TIME_FORMAT') -}}
+			{{- lang('ACP_MARTTIPHPBB_CALENDARWEEKVIEW_TIME_FORMAT') -}}
 		</legend>
 		<p>
-			{{- lang('ACP_MARTTIPHPBB_CALENDARMONTHVIEW_TIME_FORMAT_EXPLAIN') -}}
+			{{- lang('ACP_MARTTIPHPBB_CALENDARWEEKVIEW_TIME_FORMAT_EXPLAIN') -}}
 		</p>
 
 		{%- embed '@marttiphpbb_calendarweekview/include/radio.html' with {'checked': DERIVE_USER_TIME_FORMAT} only -%}
 			{%- block label -%}
-				{{- lang('ACP_MARTTIPHPBB_CALENDARMONTHVIEW_DERIVE_USER_TIME_FORMAT') -}}
+				{{- lang('ACP_MARTTIPHPBB_CALENDARWEEKVIEW_DERIVE_USER_TIME_FORMAT') -}}
 			{%- endblock -%}
 			{%- block explain -%}
 				<br>
-				{{- lang('ACP_MARTTIPHPBB_CALENDARMONTHVIEW_DERIVE_USER_TIME_FORMAT_EXPLAIN') -}}
+				{{- lang('ACP_MARTTIPHPBB_CALENDARWEEKVIEW_DERIVE_USER_TIME_FORMAT_EXPLAIN') -}}
 			{%- endblock -%}
 			{%- block name -%}
 				derive_user_time_format
@@ -85,11 +57,11 @@
 
 		{%- embed '@marttiphpbb_calendarweekview/include/text.html' -%}
 			{%- block label -%}
-				{{- lang('ACP_MARTTIPHPBB_CALENDARMONTHVIEW_DEFAULT_TIME_FORMAT') -}}
+				{{- lang('ACP_MARTTIPHPBB_CALENDARWEEKVIEW_DEFAULT_TIME_FORMAT') -}}
 			{%- endblock -%}
 			{%- block explain -%}
 				<br>
-				{{- lang('ACP_MARTTIPHPBB_CALENDARMONTHVIEW_DEFAULT_TIME_FORMAT_EXPLAIN', '<a href="http://php.net/manual/en/function.date.php">', '</a>') -}}
+				{{- lang('ACP_MARTTIPHPBB_CALENDARWEEKVIEW_DEFAULT_TIME_FORMAT_EXPLAIN', '<a href="http://php.net/manual/en/function.date.php">', '</a>') -}}
 			{%- endblock -%}
 			{%- block name -%}
 				default_time_format
@@ -102,51 +74,19 @@
 
 	<fieldset>
 		<legend>
-			{{- lang('ACP_MARTTIPHPBB_CALENDARMONTHVIEW_EVENT_ROWS') -}}
+			{{- lang('ACP_MARTTIPHPBB_CALENDARWEEKVIEW_HEIGHT_CONTAINER') -}}
 		</legend>
 
 		{%- embed '@marttiphpbb_calendarweekview/include/number.html' -%}
 			{%- block label -%}
-				{{- lang('ACP_MARTTIPHPBB_CALENDARMONTHVIEW_MIN_ROWS') -}}
-			{%- endblock -%}
-			{%- block name -%}
-				min_rows
-			{%- endblock -%}
-			{%- block value -%}
-				{{- MIN_ROWS -}}
-			{%- endblock -%}
-			{%- block attr %} min="1"{%- endblock -%}
-		{%- endembed -%}
-
-		{%- embed '@marttiphpbb_calendarweekview/include/number.html' -%}
-			{%- block label -%}
-				{{- lang('ACP_MARTTIPHPBB_CALENDARMONTHVIEW_MAX_ROWS') -}}
-			{%- endblock -%}
-			{%- block name -%}
-				max_rows
-			{%- endblock -%}
-			{%- block value -%}
-				{{- MAX_ROWS -}}
-			{%- endblock -%}
-			{%- block attr %} min="1"{%- endblock -%}
-		{%- endembed -%}
-	</fieldset>
-
-	<fieldset>
-		<legend>
-			{{- lang('ACP_MARTTIPHPBB_CALENDARMONTHVIEW_HEIGHT_WEEK_CONTAINER') -}}
-		</legend>
-
-		{%- embed '@marttiphpbb_calendarweekview/include/number.html' -%}
-			{%- block label -%}
-				{{- lang('ACP_MARTTIPHPBB_CALENDARMONTHVIEW_HEIGHT_OFFSET') -}}
+				{{- lang('ACP_MARTTIPHPBB_CALENDARWEEKVIEW_HEIGHT_OFFSET') -}}
 			{%- endblock -%}
 			{%- block explain -%}
 				<br>
-				{{- lang('ACP_MARTTIPHPBB_CALENDARMONTHVIEW_HEIGHT_OFFSET_EXPLAIN') -}}
+				{{- lang('ACP_MARTTIPHPBB_CALENDARWEEKVIEW_HEIGHT_OFFSET_EXPLAIN') -}}
 			{%- endblock -%}
 			{%- block name -%}
-				height_offset_week_cont
+				height_offset_cont
 			{%- endblock -%}
 			{%- block value -%}
 				{{- HEIGHT_OFFSET_WEEK_CONT -}}
@@ -156,7 +96,7 @@
 
 		{%- embed '@marttiphpbb_calendarweekview/include/number.html' -%}
 			{%- block label -%}
-				{{- lang('ACP_MARTTIPHPBB_CALENDARMONTHVIEW_HEIGHT_EVENT_ROW') -}}
+				{{- lang('ACP_MARTTIPHPBB_CALENDARWEEKVIEW_HEIGHT_EVENT_ROW') -}}
 			{%- endblock -%}
 			{%- block name -%}
 				height_event_row
@@ -170,44 +110,16 @@
 
 	<fieldset>
 		<legend>
-			{{- lang('ACP_MARTTIPHPBB_CALENDARMONTHVIEW_PAGINATION') -}}
-		</legend>
-
-		{%- embed '@marttiphpbb_calendarweekview/include/number.html' -%}
-			{%- block label -%}
-				{{- lang('ACP_MARTTIPHPBB_CALENDARMONTHVIEW_PAGINATION_NEIGHBOURS') -}}
-			{%- endblock -%}
-			{%- block name -%}
-				pag_neighbours
-			{%- endblock -%}
-			{%- block value -%}
-				{{- PAG_NEIGHBOURS -}}
-			{%- endblock -%}
-			{%- block attr %} min="-1" max="9"{%- endblock -%}
-		{%- endembed -%}
-
-		{%- embed '@marttiphpbb_calendarweekview/include/radio.html' with {'checked': PAG_SHOW_PREV_NEXT} only -%}
-			{%- block label -%}
-				{{- lang('ACP_MARTTIPHPBB_CALENDARMONTHVIEW_PAGINATION_SHOW_PREV_NEXT') -}}
-			{%- endblock -%}
-			{%- block name -%}
-				pag_show_prev_next
-			{%- endblock -%}
-		{%- endembed -%}
-	</fieldset>
-
-	<fieldset>
-		<legend>
-			{{- lang('ACP_MARTTIPHPBB_CALENDARMONTHVIEW_STYLESHEET') -}}
+			{{- lang('ACP_MARTTIPHPBB_CALENDARWEEKVIEW_STYLESHEET') -}}
 		</legend>
 
 		{%- embed '@marttiphpbb_calendarweekview/include/radio.html' with {'checked': LOAD_STYLESHEET} only -%}
 			{%- block label -%}
-				{{- lang('ACP_MARTTIPHPBB_CALENDARMONTHVIEW_LOAD_STYLESHEET') -}}
+				{{- lang('ACP_MARTTIPHPBB_CALENDARWEEKVIEW_LOAD_STYLESHEET') -}}
 			{%- endblock -%}
 			{%- block explain -%}
 				<br>
-				{{- lang('ACP_MARTTIPHPBB_CALENDARMONTHVIEW_LOAD_STYLESHEET_EXPLAIN') -}}
+				{{- lang('ACP_MARTTIPHPBB_CALENDARWEEKVIEW_LOAD_STYLESHEET_EXPLAIN') -}}
 			{%- endblock -%}
 			{%- block name -%}
 				load_stylesheet
@@ -216,11 +128,11 @@
 
 		{%- embed '@marttiphpbb_calendarweekview/include/text.html' -%}
 			{%- block label -%}
-				{{- lang('ACP_MARTTIPHPBB_CALENDARMONTHVIEW_EXTRA_STYLESHEET') -}}
+				{{- lang('ACP_MARTTIPHPBB_CALENDARWEEKVIEW_EXTRA_STYLESHEET') -}}
 			{%- endblock -%}
 			{%- block explain -%}
 				<br>
-				{{- lang('ACP_MARTTIPHPBB_CALENDARMONTHVIEW_EXTRA_STYLESHEET_EXPLAIN') -}}
+				{{- lang('ACP_MARTTIPHPBB_CALENDARWEEKVIEW_EXTRA_STYLESHEET_EXPLAIN') -}}
 			{%- endblock -%}
 			{%- block name -%}
 				extra_stylesheet
