min/max rows & days_num

--- a/adm/style/rendering.html
+++ b/adm/style/rendering.html
@@ -23,6 +23,23 @@
 				show_moon_phase
 			{%- endblock -%}
 		{%- endembed -%}
+
+		{%- embed '@marttiphpbb_calendarweekview/include/number.html' -%}
+			{%- block label -%}
+				{{- lang('ACP_MARTTIPHPBB_CALENDARWEEKVIEW_DAYS_NUM') -}}
+			{%- endblock -%}
+			{%- block explain -%}
+				<br>
+				{{- lang('ACP_MARTTIPHPBB_CALENDARWEEKVIEW_DAYS_NUM_EXPLAIN') -}}
+			{%- endblock -%}
+			{%- block name -%}
+				days_num
+			{%- endblock -%}
+			{%- block value -%}
+				{{- DAYS_NUM -}}
+			{%- endblock -%}
+			{%- block attr %} min="1"{%- endblock -%}
+		{%- endembed -%}
 	</fieldset>
 
 	<fieldset>
@@ -65,6 +82,39 @@
 
 	<fieldset>
 		<legend>
+			{{- lang('ACP_MARTTIPHPBB_CALENDARWEEKVIEW_EVENT_ROWS') -}}
+		</legend>
+
+		{%- embed '@marttiphpbb_calendarweekview/include/number.html' -%}
+			{%- block label -%}
+				{{- lang('ACP_MARTTIPHPBB_CALENDARWEEKVIEW_MIN_ROWS') -}}
+			{%- endblock -%}
+			{%- block name -%}
+				min_rows
+			{%- endblock -%}
+			{%- block value -%}
+				{{- MIN_ROWS -}}
+			{%- endblock -%}
+			{%- block attr %} min="1"{%- endblock -%}
+		{%- endembed -%}
+
+		{%- embed '@marttiphpbb_calendarweekview/include/number.html' -%}
+			{%- block label -%}
+				{{- lang('ACP_MARTTIPHPBB_CALENDARWEEKVIEW_MAX_ROWS') -}}
+			{%- endblock -%}
+			{%- block name -%}
+				max_rows
+			{%- endblock -%}
+			{%- block value -%}
+				{{- MAX_ROWS -}}
+			{%- endblock -%}
+			{%- block attr %} min="1"{%- endblock -%}
+		{%- endembed -%}
+	</fieldset>
+
+
+	<fieldset>
+		<legend>
 			{{- lang('ACP_MARTTIPHPBB_CALENDARWEEKVIEW_HEIGHT_CONTAINER') -}}
 		</legend>
 
@@ -80,7 +130,7 @@
 				height_offset_cont
 			{%- endblock -%}
 			{%- block value -%}
-				{{- HEIGHT_OFFSET_WEEK_CONT -}}
+				{{- HEIGHT_OFFSET_CONT -}}
 			{%- endblock -%}
 			{%- block attr %} min="1"{%- endblock -%}
 		{%- endembed -%}
