correct moon phase

--- a/adm/style/rendering.html
+++ b/adm/style/rendering.html
@@ -38,7 +38,7 @@
 			{%- block value -%}
 				{{- DAYS_NUM -}}
 			{%- endblock -%}
-			{%- block attr %} min="1"{%- endblock -%}
+			{%- block attr %} min="1" max="16"{%- endblock -%}
 		{%- endembed -%}
 	</fieldset>
 
