store to listener

--- a/adm/style/index.html
+++ b/adm/style/index.html
@@ -7,7 +7,7 @@
 {%- block form_content -%}
 	<fieldset>
 		{%- include '@marttiphpbb_calendarinlineview/include/render_params.html' with {'type_setting': 'index'} -%}
-		{%- include '@marttiphpbb_calendarinlineview/include/template.html' with {'type_setting': 'forums'} -%}
+		{%- include '@marttiphpbb_calendarinlineview/include/template.html' with {'type_setting': 'index'} -%}
 	</fieldset>
 
 	{%- include '@marttiphpbb_calendarinlineview/include/placement.html' with {'type_setting': 'index'} -%}
